Updated project to use places and tested end to end
