# routes/places.js
@@ -1,14 +1,15 @@
 var express = require('express')
 var router = express.Router()
-var controllerContacts = require('../controllers/contacts')
-var _ = require('lodash')
+var controllerContacts = require('../controllers/places')
+var camelCase = require('lodash.camelcase')
+var _ =  require('lodash.mapkeys')
 
 router.get('/', async (req, res, next) => {
   let obj = await controllerContacts.getAll(req.userId)
   let results = new Array()
 
   obj.forEach( (row) =>{
-    let mapped = _.mapKeys(row, (v, k) => _.camelCase(k))  
+    let mapped = _(row, (v, k) => camelCase(k))  
     results.push(mapped)
   })
   
@@ -16,21 +17,21 @@ router.get('/', async (req, res, next) => {
 })
 
 router.post('/', async (req, res, next) => {
-  let obj = await controllerContacts.createContact(req.userId, req.body)
-  const mapped = _.mapKeys(obj, (v, k) => _.camelCase(k))
+  let obj = await controllerContacts.createPlace(req.userId, req.body)
+  const mapped = _(obj, (v, k) => camelCase(k))
   res.send(mapped)
 })
 
 router.get('/:id', async (req, res, next) => {
 
   let obj = await controllerContacts.getById(req.params.id)
-  const mapped = _.mapKeys(obj[0], (v, k) => _.camelCase(k))
+  const mapped = _(obj[0], (v, k) => camelCase(k))
   res.send(mapped)
 })
 
 router.put('/:id', async (req, res, next) => {
   let obj = await controllerContacts.putById(req.userId, req.params.id, req.body)
-  const mapped = _.mapKeys(obj, (v, k) => _.camelCase(k))
+  const mapped = _(obj, (v, k) => camelCase(k))
   res.send(mapped)
 })
 
