# swagger.json
@@ -2,7 +2,7 @@
     "swagger": "2.0",
     "info": {
       "version": "1.0.0",
-      "title": "Mobile App Development - 2019",
+      "title": "Mobile App Development - 2020",
       "license": {
         "name": "MIT"
       }
@@ -52,11 +52,11 @@
                 }
               }
           },
-      "/contacts": {
+      "/places": {
         "get": {
-          "summary": "List all contacts",
+          "summary": "List all places",
           "tags": [
-            "Contacts"
+            "Places"
           ],
           "security": [
             {
@@ -68,7 +68,7 @@
           "parameters": [],
           "responses": {
             "200": {
-              "description": "An paged array of contacts",
+              "description": "An paged array of places",
               "headers": {
                 "x-next": {
                   "type": "string",
@@ -76,7 +76,7 @@
                 }
               },
               "schema": {
-                "$ref": "#/definitions/Contacts"
+                "$ref": "#/definitions/Places"
               }
             },
             "default": {
@@ -88,9 +88,9 @@
           }
         },
         "post": {
-          "summary": "Create a contact",
+          "summary": "Create a place",
           "tags": [
-            "Contacts"
+            "Places"
           ],
           "security": [
             {
@@ -102,18 +102,18 @@
           "parameters": [
             {
               "in": "body",
-              "name": "contact",
-              "description": "The contact to create.",
+              "name": "Place",
+              "description": "The place to create.",
               "schema": {
                 "type": "object",
                 "properties": {
-                  "firstName": {
+                  "placeName": {
                     "type": "string"
                   },
-                  "lastName": {
+                  "longitude": {
                     "type": "string"
                   },
-                  "contactNumber": {
+                  "latitude": {
                     "type": "string"
                   }
                 }
@@ -133,11 +133,11 @@
           }
         }
       },
-      "/contacts/{contactId}": {
+      "/places/{placeId}": {
         "get": {
-          "summary": "Info for a specific contact",
+          "summary": "Info for a specific place",
           "tags": [
-            "Contacts"
+            "Places"
           ],
           "security": [
             {
@@ -148,10 +148,10 @@
           ],
           "parameters": [
             {
-              "name": "contactId",
+              "name": "placeId",
               "in": "path",
               "required": true,
-              "description": "The id of the contact to retrieve",
+              "description": "The id of the place to retrieve",
               "type": "string"
             }
           ],
@@ -159,7 +159,7 @@
             "200": {
               "description": "Expected response to a valid request",
               "schema": {
-                "$ref": "#/definitions/Contacts"
+                "$ref": "#/definitions/Places"
               }
             },
             "default": {
@@ -171,9 +171,9 @@
           }
         },
         "put": {
-            "summary": "Update a specific contact",
+            "summary": "Update a specific place",
             "tags": [
-              "Contacts"
+              "Places"
             ],
             "security": [
               {
@@ -184,26 +184,26 @@
             ],
             "parameters": [
               {
-                "name": "contactId",
+                "name": "placeId",
                 "in": "path",
                 "required": true,
-                "description": "The id of the contact to retrieve",
+                "description": "The id of the place to retrieve",
                 "type": "string"
               },
               {
                 "in": "body",
-                "name": "contact",
-                "description": "The contact to update.",
+                "name": "Place",
+                "description": "The place to update.",
                 "schema": {
                   "type": "object",
                   "properties": {
-                    "firstName": {
+                    "placeName": {
                       "type": "string"
                     },
-                    "lastName": {
+                    "longitude": {
                       "type": "string"
                     },
-                    "contactNumber": {
+                    "latitude": {
                       "type": "string"
                     }
                   }
@@ -214,7 +214,7 @@
               "200": {
                 "description": "Expected response to a valid request",
                 "schema": {
-                  "$ref": "#/definitions/Contacts"
+                  "$ref": "#/definitions/Places"
                 }
               },
               "default": {
@@ -226,10 +226,10 @@
             }
         },
         "delete": {
-            "summary": "Delete a specific contact",
-            "operationId": "deleteContactById",
+            "summary": "Delete a specific place",
+            "operationId": "deletePlaceById",
             "tags": [
-              "Contacts"
+              "Places"
             ],
             "security": [
               {
@@ -240,18 +240,23 @@
             ],
             "parameters": [
               {
-                "name": "contactId",
+                "name": "placeId",
                 "in": "path",
                 "required": true,
-                "description": "The id of the contact to retrieve",
+                "description": "The id of the place to delete",
                 "type": "string"
               }
             ],
             "responses": {
               "200": {
-                "description": "Expected response to a valid request",
+                "description": "Place deleted",
                 "schema": {
-                  "$ref": "#/definitions/Contacts"
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string"
+                    }
+                  }
                 }
               },
               "default": {
@@ -265,33 +270,32 @@
       }
     },
     "definitions": {
-      "Contact": {
+      "Place": {
         "required": [
           "id"
         ],
         "properties": {
           "id": {
-            "type": "integer",
-            "format": "int64"
+            "type": "integer"
           },
           "userId": {
-            "type": "int64"
+            "type": "integer"
           },
-          "firstName": {
+          "placeName": {
             "type": "string"
           },
-          "lastName": {
+          "longitude": {
             "type": "string"
           },
-          "contactNumber": {
+          "latitude": {
             "type": "string"
           }
         }
       },
-      "Contacts": {
+      "Places": {
         "type": "array",
         "items": {
-          "$ref": "#/definitions/Contact"
+          "$ref": "#/definitions/Place"
         }
       },
       "Authentication": {
@@ -315,8 +319,7 @@
         ],
         "properties": {
           "code": {
-            "type": "integer",
-            "format": "int32"
+            "type": "integer"
           },
           "message": {
             "type": "string"
